KVM: arm64: kcov: Add kcov support in EL2 object
Change-Id: Ib1556c1194a0bae23438746bd3175ac780fae727

--- a/arch/arm64/kvm/Makefile
+++ b/arch/arm64/kvm/Makefile
@@ -24,6 +24,7 @@ kvm-y += arm.o mmu.o mmio.o psci.o hypercalls.o pvtime.o \
 
 kvm-$(CONFIG_PKVM_PROXY) += pkvm_proxy.o
 kvm-$(CONFIG_HW_PERF_EVENTS)  += pmu-emul.o pmu.o
+kvm-$(CONFIG_NVHE_KCOV) += nvhe_kcov.o
 
 always-y := hyp_constants.h hyp-constants.s
 
