Config TEMP_PROOF_SIMPLIFICATION for proof hacks

--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1,4 +1,9 @@
 # SPDX-License-Identifier: GPL-2.0-only
+config TEMP_PROOF_SIMPLIFICATION
+	def_bool y
+	help
+	  Simplify (break) some features for proof purposes, for now.
+
 config CC_VERSION_TEXT
 	string
 	default "$(CC_VERSION_TEXT)"
