--- a/arch/arm64/kvm/Kconfig
+++ b/arch/arm64/kvm/Kconfig
@@ -71,6 +71,18 @@ config PROTECTED_NVHE_STACKTRACE
 
 	  If unsure, or not using protected nVHE (pKVM), say N.
 
+config PKVM_PROXY
+	bool "Access to pkvm proxy debug file to issue hypercalls from usermode (UNSAFE)"
+	depends on NVHE_EL2_DEBUG
+	default n
+	help
+	  Say Y here to enable the pkvm proxy component that allows a user mode
+	  program to issue direct hypercalls. This is unsafe for obvious
+	  reasons. It makes it really easy for a simple user mode program with
+	  rights to access the debugfs to panic the entire system.
+
+	  If unsure, say N.
+
 config KVM_ARM_HYP_DEBUG_UART
 	bool "Hack up some basic UART functionality at EL2"
 
