[UNSAFE] KVM: arm64: Add pkvm proxy module
This allows when enabled, to completely bypass the regular KVM API
and interact directly the hypercall API. This is usefull to test the
pKVM hypervisor. However this completely break the kernel security
model, any kernel having this commit is severly compromised.

The ioctl-based UAPI is described in
arch/arm64/include/uapi/asm/pkvm_proxy.h

The set of supported hypervisor operations is enough to boot a
non-protected guest on pkvm-core-6.4. Other version might need
modifications to reach that stage

Change-Id: I8b9aa25bbb5fabbba3fae10641a828be8511965f

--- a/arch/arm64/kvm/Kconfig
+++ b/arch/arm64/kvm/Kconfig
@@ -92,4 +92,16 @@ config KVM_ARM_HYP_DEBUG_UART_ADDR
 	depends on KVM_ARM_HYP_DEBUG_UART
 	default 0x09000000
 
+config PKVM_PROXY
+	bool "Access to pkvm proxy debug file to issue hypercalls from usermode (UNSAFE)"
+	depends on NVHE_EL2_DEBUG
+	default n
+	help
+	  Say Y here to enable the pkvm proxy component that allows a user mode
+	  program to issue direct hypercalls. This is unsafe for obvious
+	  reasons. It makes it really easy for a simple user mode program with
+	  rights to access the debugfs to panic the entire system.
+
+	  If unsure, say N.
+
 endif # VIRTUALIZATION
