(kvm/hyp/nvhe): arm64: compile -O1

--- a/arch/arm64/kvm/hyp/nvhe/Makefile
+++ b/arch/arm64/kvm/hyp/nvhe/Makefile
@@ -125,3 +125,5 @@ KCOV_INSTRUMENT	:= n
 # Skip objtool checking for this directory because nVHE code is compiled with
 # non-standard build rules.
 OBJECT_FILES_NON_STANDARD := y
+
+ccflags-y += -O1
