(cl/Makefile) fix build to only build kernel Image target

--- a/cl/Makefile
+++ b/cl/Makefile
@@ -58,5 +58,5 @@ configure:
 
 build:
 	@echo ... building kernel
-	$(MAKE) -C $(abspath ..) ARCH=arm64 CC=$(CC) CROSS_COMPILE=aarch64-linux-gnu- -j $$(nproc)
+	$(MAKE) -C $(abspath ..) ARCH=arm64 CC=$(CC) CROSS_COMPILE=aarch64-linux-gnu- -j $$(nproc) Image
 .PHONY: build
