(ghost_alloc) itsy bitsy allocator

--- a/arch/arm64/kvm/hyp/Makefile
+++ b/arch/arm64/kvm/hyp/Makefile
@@ -10,6 +10,6 @@ subdir-ccflags-y := -I$(incdir)
 obj-$(CONFIG_KVM) += vhe/ nvhe/ pgtable.o
 
 # GHOST
-ghosts := ghost_maplets.o ghost_pgtable.o ghost_control.o ghost_extra_debug-pl011.o ghost_pfn_set.o
+ghosts := ghost_maplets.o ghost_pgtable.o ghost_control.o ghost_extra_debug-pl011.o ghost_pfn_set.o ghost_alloc.o
 obj-y += $(ghosts)
 # /GHOST
