(ghost/log) add context helpers
Adds a nicer stack-based traceback reporting system for the ghost code.

On an error (e.g. failed refinement between ghost states) can dump a
custom traceback.

--- a/arch/arm64/kvm/hyp/nvhe/Makefile
+++ b/arch/arm64/kvm/hyp/nvhe/Makefile
@@ -40,6 +40,7 @@ ghosts += ../ghost_maplets.o
 ghosts += ../ghost_pgtable.o
 ghosts += ../ghost_control.o
 ghosts += ../ghost_pfn_set.o
+ghosts += ../ghost_context.o
 ghosts += ghost_compute_abstraction.o
 ghosts += ghost_spec.o
 ghosts += ../ghost_alloc.o
