--- a/arch/arm64/kvm/hyp/Makefile
+++ b/arch/arm64/kvm/hyp/Makefile
@@ -11,5 +11,5 @@ obj-$(CONFIG_KVM) += vhe/ nvhe/ pgtable.o
 
 # GHOST
 ghosts := ghost_maplets.o ghost_pgtable.o ghost_control.o ghost_extra_debug-pl011.o ghost_pfn_set.o ghost_alloc.o ghost_context.o
-obj-y += $(ghosts)
+obj-$(CONFIG_NVHE_GHOST_SPEC) += $(ghosts)
 # /GHOST
