--- a/arch/arm64/kvm/hyp/Makefile
+++ b/arch/arm64/kvm/hyp/Makefile
@@ -9,6 +9,9 @@ subdir-ccflags-y := -I$(incdir)
 
 obj-$(CONFIG_KVM) += vhe/ nvhe/ pgtable.o
 
-ghosts := ghost_maplets.o ghost_pgtable.o ghost_control.o ghost_extra_debug-pl011.o ghost_pfn_set.o ghost_alloc.o ghost_context.o
+ghosts := \
+	ghost_maplets.o ghost_pgtable.o ghost_pfn_set.o \
+	ghost_control.o ghost_context.o ghost_extra_debug-pl011.o \
+	ghost_alloc.o
 
 obj-$(CONFIG_NVHE_GHOST_SPEC) += $(ghosts)
