(cl) update firmware urls

--- a/cl/qemu-host/Makefile
+++ b/cl/qemu-host/Makefile
@@ -1,6 +1,6 @@
 DEB_ISO = debian-12.2.0-arm64-netinst.iso
-EFI_DEB = qemu-efi-aarch64_2023-05-1_all.deb
-EFI_LOC = /usr/share/qemu-efi-aarch64/QEMU_EFI.fd 
+EFI_DEB = qemu-efi-aarch64_2023.08-1_all.deb
+EFI_LOC = /usr/share/qemu-efi-aarch64/QEMU_EFI.fd
 
 all: disk.img $(DEB_ISO) firmware/
 .PHONY: all
