--- a/arch/arm64/kvm/hyp/nvhe/Makefile
+++ b/arch/arm64/kvm/hyp/nvhe/Makefile
@@ -40,6 +40,7 @@ ghosts += ../ghost_control.o
 ghosts += ../ghost_pfn_set.o
 ghosts += ../ghost_context.o
 ghosts += ghost_compute_abstraction.o
+ghosts += ghost_abstraction_diff.o
 ghosts += ghost_spec.o
 ghosts += ../ghost_alloc.o
 ghosts += ../ghost_control.o
