(ghost/printer) add ghost_printf
Overhaul of the ghost print machinery.

This adds a printf-like mechanism to print to UART or string buffers.

Generally can be used like normal printf:
> ghost_printf("%d %s:%lx\n", 42, "hello", 0x1234);

But comes with some extra printf-codes (see the comment in the header)
for ghost: %g(maplet) and %g(pgtable) for printing maplets and mappings,
and %$ for printing the shadow stack.

--- a/arch/arm64/kvm/hyp/Makefile
+++ b/arch/arm64/kvm/hyp/Makefile
@@ -12,6 +12,6 @@ obj-$(CONFIG_KVM) += vhe/ nvhe/ pgtable.o
 ghosts := \
 	ghost_maplets.o ghost_pgtable.o ghost_pfn_set.o \
 	ghost_control.o ghost_context.o ghost_extra_debug-pl011.o \
-	ghost_alloc.o
+	ghost_alloc.o ghost_printer.o
 
 obj-$(CONFIG_NVHE_GHOST_SPEC) += $(ghosts)
