(ghost) moving all ghost source files into `ghost/` subdirectories
We opted to still follow the source layout of pKVM, so there are four
new directories:

arch/arm64/kvm/hyp/ghost/
arch/arm64/kvm/hyp/include/hyp/ghost/

arch/arm64/kvm/hyp/nvhe/ghost/
arch/arm64/kvm/hyp/include/nvhe/ghost/

This commit also updates the include paths and Makefiles.

--- a/arch/arm64/kvm/hyp/Makefile
+++ b/arch/arm64/kvm/hyp/Makefile
@@ -10,8 +10,8 @@ subdir-ccflags-y := -I$(incdir)
 obj-$(CONFIG_KVM) += vhe/ nvhe/ pgtable.o
 
 ghosts := \
-	ghost_maplets.o ghost_pgtable.o ghost_pfn_set.o \
-	ghost_control.o ghost_context.o ghost_extra_debug-pl011.o \
-	ghost_alloc.o ghost_status.o ghost_printer.o
+	ghost/ghost_maplets.o ghost/ghost_pgtable.o ghost/ghost_pfn_set.o \
+	ghost/ghost_control.o ghost/ghost_context.o ghost/ghost_extra_debug-pl011.o \
+	ghost/ghost_alloc.o ghost/ghost_status.o ghost/ghost_printer.o
 
 obj-$(CONFIG_NVHE_GHOST_SPEC) += $(ghosts)
