--- a/arch/arm64/kvm/hyp/nvhe/Makefile
+++ b/arch/arm64/kvm/hyp/nvhe/Makefile
@@ -28,27 +28,27 @@ hyp-obj-y += ../vgic-v3-sr.o ../aarch32.o ../vgic-v2-cpuif-proxy.o ../entry.o \
 hyp-obj-$(CONFIG_DEBUG_LIST) += list_debug.o
 hyp-obj-y += $(lib-objs)
 
-ghosts += ../ghost_extra_debug-pl011.o
-ghosts += ../ghost_printer.o
-ghosts += ghost_mapping_reqs.o
-ghosts += ghost_misc.o
-ghosts += ghost_asm.o
-ghosts += ghost_sort_hack.o
-ghosts += ghost_list_sort_hack.o
-ghosts += ../ghost_maplets.o
-ghosts += ../ghost_pgtable.o
-ghosts += ../ghost_control.o
-ghosts += ../ghost_pfn_set.o
-ghosts += ../ghost_context.o
-ghosts += ../ghost_status.o
-ghosts += ghost_compute_abstraction.o
-ghosts += ghost_spec.o
-ghosts += ../ghost_alloc.o
-ghosts += ../ghost_control.o
+ghosts += ../ghost/ghost_extra_debug-pl011.o
+ghosts += ../ghost/ghost_printer.o
+ghosts += ghost/ghost_mapping_reqs.o
+ghosts += ghost/ghost_misc.o
+ghosts += ghost/ghost_asm.o
+ghosts += ghost/ghost_sort_hack.o
+ghosts += ghost/ghost_list_sort_hack.o
+ghosts += ../ghost/ghost_maplets.o
+ghosts += ../ghost/ghost_pgtable.o
+ghosts += ../ghost/ghost_control.o
+ghosts += ../ghost/ghost_pfn_set.o
+ghosts += ../ghost/ghost_context.o
+ghosts += ../ghost/ghost_status.o
+ghosts += ghost/ghost_compute_abstraction.o
+ghosts += ghost/ghost_spec.o
+ghosts += ../ghost/ghost_alloc.o
+ghosts += ../ghost/ghost_control.o
 
 hyp-obj-$(CONFIG_NVHE_GHOST_SPEC) += $(ghosts)
-hyp-obj-$(CONFIG_NVHE_GHOST_SIMPLIFIED_MODEL) += ghost_simplified_model.o
-hyp-obj-$(CONFIG_NVHE_GHOST_DIFF) += ghost_abstraction_diff.o
+hyp-obj-$(CONFIG_NVHE_GHOST_SIMPLIFIED_MODEL) += ghost/ghost_simplified_model.o
+hyp-obj-$(CONFIG_NVHE_GHOST_DIFF) += ghost/ghost_abstraction_diff.o
 
 ghost-lib-objs := strcmp.o strlen.o
 hyp-obj-$(CONFIG_NVHE_GHOST_SPEC) += $(addprefix ../../../lib/, $(ghost-lib-objs))
