(ghost) WIP: rm ghost_compute_abstraction and fold remaining functions into ghost_spec,ghost_types and ghost_record

--- a/arch/arm64/kvm/hyp/nvhe/Makefile
+++ b/arch/arm64/kvm/hyp/nvhe/Makefile
@@ -41,7 +41,8 @@ ghosts += ../ghost/ghost_control.o
 ghosts += ../ghost/ghost_pfn_set.o
 ghosts += ../ghost/ghost_context.o
 ghosts += ../ghost/ghost_status.o
-ghosts += ghost/ghost_compute_abstraction.o
+ghosts += ghost/ghost_record.o
+ghosts += ghost/ghost_types.o
 ghosts += ghost/ghost_spec.o
 ghosts += ../ghost/ghost_alloc.o
 ghosts += ../ghost/ghost_control.o
