--- a/arch/arm64/kvm/Kconfig
+++ b/arch/arm64/kvm/Kconfig
@@ -104,4 +104,11 @@ config PKVM_PROXY
 
 	  If unsure, say N.
 
+config GCOV_NVHE_EL2
+	bool "GCOV profiling for NVHE EL2 object"
+        depends on (NVHE_EL2_DEBUG && GCOV_KERNEL)
+        default n
+        help
+          Say N here.
+
 endif # VIRTUALIZATION
