Work-in-progress: adding picovm, a toy cutdown version of pKVM
this disables the option of building NVHE and doesn't currently
allow building a whole kernel.

--- a/arch/arm64/kvm/hyp/Makefile
+++ b/arch/arm64/kvm/hyp/Makefile
@@ -7,7 +7,8 @@ incdir := $(srctree)/$(src)/include
 subdir-asflags-y := -I$(incdir)
 subdir-ccflags-y := -I$(incdir)
 
-obj-$(CONFIG_KVM) += vhe/ nvhe/ pgtable.o
+# obj-$(CONFIG_KVM) += vhe/ nvhe/ pgtable.o
+obj-$(CONFIG_KVM) += vhe/ picovm/ pgtable.o
 
 ghosts := \
 	ghost/ghost_maplets.o ghost/ghost_pgtable.o ghost/ghost_pfn_set.o \
