(ghost) moving ghost files left in hyp/ down to nvhe/
Even so some ghost functions are called hyp/pgtable.c, this is only when
compiled for __KVM_NVHE_HYPERVISOR__.

--- a/arch/arm64/kvm/hyp/nvhe/Makefile
+++ b/arch/arm64/kvm/hyp/nvhe/Makefile
@@ -28,24 +28,24 @@ hyp-obj-y += ../vgic-v3-sr.o ../aarch32.o ../vgic-v2-cpuif-proxy.o ../entry.o \
 hyp-obj-$(CONFIG_DEBUG_LIST) += list_debug.o
 hyp-obj-y += $(lib-objs)
 
-ghosts += ../ghost/ghost_extra_debug-pl011.o
-ghosts += ../ghost/ghost_printer.o
+ghosts += ghost/ghost_extra_debug-pl011.o
+ghosts += ghost/ghost_printer.o
 ghosts += ghost/ghost_mapping_reqs.o
 ghosts += ghost/ghost_misc.o
 ghosts += ghost/ghost_asm.o
 ghosts += ghost/ghost_sort_hack.o
 ghosts += ghost/ghost_list_sort_hack.o
-ghosts += ../ghost/ghost_maplets.o
-ghosts += ../ghost/ghost_pgtable.o
-ghosts += ../ghost/ghost_control.o
-ghosts += ../ghost/ghost_pfn_set.o
-ghosts += ../ghost/ghost_context.o
-ghosts += ../ghost/ghost_status.o
+ghosts += ghost/ghost_maplets.o
+ghosts += ghost/ghost_pgtable.o
+ghosts += ghost/ghost_control.o
+ghosts += ghost/ghost_pfn_set.o
+ghosts += ghost/ghost_context.o
+ghosts += ghost/ghost_status.o
 ghosts += ghost/ghost_recording.o
 ghosts += ghost/ghost_types_aux.o
 ghosts += ghost/ghost_spec.o
-ghosts += ../ghost/ghost_alloc.o
-ghosts += ../ghost/ghost_control.o
+ghosts += ghost/ghost_alloc.o
+ghosts += ghost/ghost_control.o
 
 hyp-obj-$(CONFIG_NVHE_GHOST_SPEC) += $(ghosts)
 hyp-obj-$(CONFIG_NVHE_GHOST_SIMPLIFIED_MODEL) += ghost/ghost_simplified_model.o
